# syscallcage

./: .gitignore  .syscallcage.yaml  12-watch-e-instalacao-facil.md  Cargo.toml  README.md  flake.nix  go.mod  go.sum  install.sh  relatorio_progresso_syscallcage.md  wsl_test.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml  verify-ebpf.yml
cmd/agent-cage/: main.go
configs/: exemplo-claude-code.yaml  exemplo-monitor-mode.yaml  test-exec-policy.yaml
docs/: WSL_BPF_LSM_Decision.md  alternatives.md
internal/enforcer/: enforcer.go  enforcer_test.go
internal/logging/: logging.go
internal/monitor/: monitor.go  monitor_test.go
internal/monitor/bpf/: monitor.c
internal/policy/: matcher.go  matcher_test.go  policy.go
packaging/aur/syscallcage/: PKGBUILD
scripts/: build-ebpf.sh  e2e-test.sh  exec_workload.py  multi_violation_workload.py  network_workload.py  test-exec.sh  test-generate-policy.sh  test-kill9.sh  test-multi-violation.sh  test-network.sh
spec/: 00-mvp.md  13-core-real-bindings-btf.md  14-core-real-bindings-btf.md  15-distribuicao-e-ergonomia.md
syscallcage/: Cargo.toml
syscallcage-ebpf/: Cargo.toml
syscallcage-ebpf/src/: main.rs  vmlinux.rs
syscallcage/src/: logging.rs  main.rs  policy_generator.rs  policy_sync_compiler.rs  watch.rs
syscallcage/src/enforcer/: mod.rs
syscallcage/src/monitor/: mod.rs
syscallcage/src/policy/: discovery.rs  matcher.rs  mod.rs
