[package]
name = "syscallcage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "syscallcage"
path = "src/main.rs"

[dependencies]
aya = "0.14.0"
aya-log = "0.3.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"
nix = { version = "0.27", features = ["signal"] }
tokio = { version = "1.35", features = ["full"] }
libc = "0.2"
