[package]
name = "syscallcage"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "Kernel-level guardrails for autonomous AI agents. Restricts what a process can do via eBPF, with synchronous (BPF LSM) enforcement when the kernel supports it."
repository = "https://github.com/rodrigoffreir3/syscallcage"
homepage = "https://rodrigofreire.pages.dev/syscallcage"
readme = "../README.md"
keywords = ["ebpf", "security", "sandbox", "ai-agents", "lsm"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = [
    "../scratch/*",
    "../*.tar.gz",
]

[[bin]]
name = "syscallcage"
path = "src/main.rs"

[dependencies]
aya = "0.14.0"
aya-log = "0.3.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"
nix = { version = "0.27", features = ["signal", "process"] }
tokio = { version = "1.35", features = ["full"] }
libc = "0.2"
sha2 = "0.11.0"
